syntax = "proto3";

package api;
option go_package = "github.com/Ahmed-I-Abdullah/p2p-code-collaboration/internal/api/pb";

service Repository {
    rpc Init(RepoInitRequest) returns (RepoInitResponse);
}

message RepoInitRequest {
    string name = 1;
    bool from_cli = 2;
}

message RepoInitResponse {
    bool success = 1;
    string message = 2;
}